# r1_rover_gps_lidar

./: README.md
odom_to_tf/: CMakeLists.txt  package.xml
odom_to_tf/include/odom_to_tf/: OdomNode.hpp
odom_to_tf/src/: odom_to_tf_main.cpp
odom_to_tf/src/odom_to_tf/: OdomNode.cpp
px4/: 4012_gz_rover_lidar_r1
px4/models/rover_lidar_r1/: model.config  model.sdf
r1_description/: CMakeLists.txt  package.xml
r1_description/meshes/dae/: Torus.004.dae  Torus.005.dae  Torus.006.dae  Torus.007.dae
r1_description/robots/: robot.urdf.xacro
r1_description/urdf/base/: robot_base.urdf.xacro
r1_description/urdf/utils/: utils.urdf.xacro
r1_description/urdf/wheels/: rover_wheel.urdf.xacro
r1_rover_launcher/: CMakeLists.txt  package.xml
r1_rover_launcher/config/: r1_patrolling_params.yaml  r1_rover_bridge.yaml  r1_rover_gps.params.yaml  r1_rover_gps_lidar_navmap.params.yaml  r1_rover_navmap.params.yaml
r1_rover_launcher/launch/: r1_rover_easynav.launch.py  r1_rover_lidar.launch.py
r1_rover_launcher/rviz/: gps.rviz  navmap.rviz  rover_lidar.rviz
r1_rover_vel/: CMakeLists.txt  package.xml
r1_rover_vel/include/r1_rover_vel/: RoverVelNode.hpp
r1_rover_vel/src/: r1_rover_vel_main.cpp
r1_rover_vel/src/r1_rover_vel/: RoverVelNode.cpp
