cmake_minimum_required(VERSION 3.8)
project(odom_to_tf)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(geometry_msgs REQUIRED)

set(dependencies
    rclcpp
    nav_msgs
    tf2_ros
    geometry_msgs
)

include_directories(include)

add_library(${PROJECT_NAME} SHARED
  src/odom_to_tf/OdomNode.cpp
)
ament_target_dependencies(${PROJECT_NAME} ${dependencies})

add_executable(odom_to_tf_main src/odom_to_tf_main.cpp)
ament_target_dependencies(odom_to_tf_main ${dependencies})
target_link_libraries(odom_to_tf_main ${PROJECT_NAME})


install(TARGETS
  odom_to_tf_main
  ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_export_dependencies(${dependencies})
ament_package()
